Aggiunta delle celle di Markdown per i due attacchi eseguiti

--- a/Progetto/LSMT/Test_Kinematic_Inconsistency.ipynb
+++ b/Progetto/LSMT/Test_Kinematic_Inconsistency.ipynb
@@ -5,7 +5,18 @@
    "id": "1d97cf9d",
    "metadata": {},
    "source": [
-    "## Test Kinematic Inconsistency"
+    "## Test Kinematic Inconsistency\n",
+    "Questo blocco di codice iniziale serve come piattaforma di configurazione e caricamento per la valutazione dell'efficacia del modello LSTM Autoencoder nel rilevare attacchi cinematici.\n",
+    "\n",
+    "1. **Preparazione degli Strumenti Analitici e di Misurazione.**\n",
+    "    Il codice importa un set di librerie focalizzate sulla valutazione della performance dove troviamo le metriche standard di cybersecurity e machine learning **(come l'Accuracy, Precision, Recall, F1-Score e la Curva ROC).**\n",
+    "\n",
+    "2. **Ottimizzazione e Caricamento dei Componenti.**\n",
+    "   Viene eseguita l'ottimizzazione dell'hardware (GPU e Mixed Precision) per garantire che la fase di test sia rapida ed efficiente.\n",
+    "   \n",
+    "3. **Definizione del Contesto Operativo.**\n",
+    "   Vengono riconfermati i parametri strutturali del modello (WINDOW_SIZE, BATCH_SIZE e le quattro feature dinamiche) e, crucialmente, viene identificato il set di File di Test.\n",
+    "   Questi file sono la base sperimentale. Su queste traiettorie originali (mai viste dal modello), verrà iniettato l'attacco cinematico. Il modello, che è stato addestrato solo sulla normalità, elaborerà queste traiettorie alterate."
    ]
   },
   {
@@ -71,6 +82,15 @@
     "all_files = sorted(glob.glob(os.path.join(INPUT_DIR, '*.parquet')))\n",
     "TEST_FILES = all_files[20:24]\n",
     "print(f\"File di Test caricati\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f6d86e7",
+   "metadata": {},
+   "source": [
+    "#####  Definizione delle Funzioni del Data Generator\n",
+    "Questo blocco definisce le due funzioni essenziali per trasformare i dati grezzi in sequenze pronte per il modello, mantenendo un'alta efficienza in termini di memoria (RAM)"
    ]
   },
   {
@@ -151,6 +171,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "eb40028b",
+   "metadata": {},
+   "source": [
+    "#### Caricamento Risorse"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "d98a428f",
@@ -187,7 +215,21 @@
    "id": "6d159b94",
    "metadata": {},
    "source": [
-    "#### Funzione di Attacco"
+    "#### Funzione di Attacco Cinematico\n",
+    "La funzione `apply_kinematic_attack `prende un batch di traiettorie normali e introduce un'anomalia istantanea, creando un'incoerenza fisica tra la posizione dichiarata e i parametri di movimento dinamico della nave.\n",
+    "Un attacco cinematico simula un errore o una manipolazione nel segnale GPS/AIS (Automatic Identification System) della nave. L'attacco non modifica la rotta o la velocità in modo graduale e realistico, ma introduce una discontinuità istantanea nella posizione. Il modello LSTM Autoencoder è stato addestrato per apprendere proprio questa relazione fisica coerente. Quando la rete vede una posizione che \"salta\" senza che la velocità e la rotta cambino in modo corrispondente, l'errore di ricostruzione sarà altissimo.\n",
+    "La funzione crea l'attacco agendo direttamente sui dati normalizzati:\n",
+    "\n",
+    "1. **Copia e Inizio Attacco:** La funzione crea una copia dei dati puliti `(batch_clean.copy())` per non alterare l'originale. L'attacco viene fatto partire dal timestep 15 `(attack_start_idx)`, ovvero a metà della finestra temporale di 30 step.\n",
+    "\n",
+    "2. **Iniezione del Salto di Posizione:**\n",
+    "   * `batch_attacked[:, attack_start_idx:, 0] += shift_magnitude`(Latitudine) \n",
+    "   * `batch_attacked[:, attack_start_idx:, 1] += shift_magnitude` (Longitudine)\n",
+    "      * Questo è il cuore dell'attacco: Viene aggiunto un offset costante (`shift_magnitude`, ad esempio, 2 deviazioni standard) a tutti i punti successivi al timestep 15. Questo crea un **\"gradino\"** istantaneo nel segnale della posizione, simulando un teletrasporto della nave.\n",
+    "\n",
+    "3. **Incoerenza Vettoriale:** La parte cruciale dell'attacco è che i parametri dinamici (Velocità $\\text{SOG}$ e Rotta $\\text{COG}$, indici 2 e 3) non vengono modificati.\n",
+    "\n",
+    "L'output della funzione è un batch di traiettorie che mostrano: posizione saltata $\\cap$ dinamica inspiegabilmente coerente, creando esattamente l'anomalia che il modello LSTM è stato addestrato a riconoscere."
    ]
   },
   {
@@ -289,7 +331,8 @@
    "id": "7fe4120b",
    "metadata": {},
    "source": [
-    "#### Predizioni"
+    "#### Calcolo degli Errori di Rilevamento\n",
+    "Si sottopone il modello addestrato ai dati conteneni l'attacco cinematico. Come metrica chiave calcoliamo il $\\text{MAE}$\n"
    ]
   },
   {
@@ -338,7 +381,14 @@
    "id": "6544d054",
    "metadata": {},
    "source": [
-    "#### Istogramma comparativo"
+    "#### Istogramma comparativo\n",
+    "Il codice genera un doppio istogramma che confronta le firme d'errore del modello quando elabora dati puliti e quando elabora dati compromessi.\n",
+    "\n",
+    "**Analisi dell'Output Grafico:** Il grafico \"Distribuzione Errore di Ricostruzione: Normali vs Attacchi\"  è la prova tangibile del successo del rilevatore:\n",
+    "  * **Distribuzione delle Traiettorie Normali (Verde):** La curva verde è estremamente concentrata vicino allo zero ($\\text{MAE} < 0.1$). Il picco principale si trova intorno allo $0.03$. Questo conferma che il modello LSTM Autoencoder ricostruisce le traiettorie normali con un errore quasi nullo. Questa è la baseline di normalità.\n",
+    "  * **Distribuzione delle Traiettorie Attaccate (Rosso):** La curva rossa è completamente separata dalla distribuzione normale. Inizia solo dopo $\\text{MAE} \\approx 0.7$. Il picco della distribuzione degli attacchi si trova tra $\\text{MAE} \\approx 0.8$ e $1.0$.L'enorme errore di ricostruzione (da 20 a 30 volte superiore alla media normale) dimostra che l'incoerenza fisica introdotta dall'attacco cinematico ha distrutto la capacità del modello di ricostruire la sequenza. Il modello ha \"capito\" che la traiettoria è fisicamente impossibile.\n",
+    "\n",
+    "La totale separazione tra le due distribuzioni è il risultato ottimale per un sistema di rilevamento. Questo significa che qualsiasi soglia scelta tra $\\text{MAE} = 0.2$ e $\\text{MAE} = 0.7$ (ad esempio, $\\text{Soglia}=0.4$) è sufficiente per separare perfettamente le traiettorie normali da quelle attaccate. Il modello ha un'alta differenziabilità tra le classi, rendendo il rilevamento altamente accurato e robusto.\n"
    ]
   },
   {
@@ -383,12 +433,31 @@
    "id": "23701a3b",
    "metadata": {},
    "source": [
-    "#### Classificazione e metriche"
+    "#### Valutazione Quantitatica e Matrice di Confusione\n",
+    "1. **Definizione Statistica della Soglia**\n",
+    "    * Logica: La soglia di rilevamento **(THRESHOLD)** è definita statisticamente utilizzando gli errori di ricostruzione delle sole   traiettorie normali.\n",
+    "    * **Regola del $3\\sigma$:** Si utilizza la regola della deviazione standard ($\\mathbf{3\\sigma}$), comune nei sistemi di rilevamento anomalie. La soglia viene impostata alla Media degli Errori Normali più tre volte la Deviazione Standard di tali errori.\n",
+    "\n",
+    "Il **TRESHOLD** è di $\\mathbf{0.1385}$, che è molto più basso del $\\text{MAE}$ degli attacchi (che partiva da circa $0.7$), garantendo un'ottima separazione.\n",
+    "\n",
+    "2. **Classificazione e Calcolo delle Metriche**\n",
+    "   * Viene eseguita la classificazione binaria: se l'errore $\\text{MAE}$ del campione supera la **THRESHOLD**, il sistema predice un Attacco (1); altrimenti, predice Normale (0).\n",
+    "   * **Metriche Calcolate:** \n",
+    "     * $\\mathbf{Accuracy} \\approx 0.9937$ (99.37% di tutte le classificazioni sono corrette).\n",
+    "     * $\\mathbf{Precision} \\approx 0.9875$ (Quando il modello dice \"Attacco\", ha ragione nel 98.75% dei casi).\n",
+    "     * $\\mathbf{Recall} = 1.0000$ (Il modello ha trovato il 100% di tutti gli attacchi reali presenti nel set).\n",
+    "     * $\\mathbf{F1-Score} \\approx 0.9937$ (La media armonica di Precision e Recall, un ottimo indicatore della performance complessiva).\n",
+    "\n",
+    "3. **Analisi della Matrice di Confusione**\n",
+    "   * **True Positives (320,000):** Il modello ha identificato correttamente tutti i campioni che contenevano l'attacco cinematico.\n",
+    "   * **True Negatives (315,939):** Il modello ha classificato correttamente la stragrande maggioranza dei campioni normali.\n",
+    "   * **False Negatives (0):** Non c'è stato nessun falso negativo. \n",
+    "   * **False Positives (4,061):** Ci sono stati 4,061 falsi positivi (traiettorie normali classificate erroneamente come attacco). Questo corrisponde allo $\\mathbf{0.63\\%}$ dei campioni normali, in linea con l'aspettativa statistica di una soglia $3\\sigma$ (dove si aspetta che circa lo $0.3\\%$ cada fuori).\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "437e0eb5",
    "metadata": {},
    "outputs": [
@@ -452,7 +521,11 @@
    "id": "9f3190d4",
    "metadata": {},
    "source": [
-    "#### Visualizzazione attacco"
+    "#### Visualizzazione di un singolo attacco\n",
+    "Il codice estrae un campione specifico di traiettoria a cui è stato applicato l'attacco cinematico e traccia su un grafico 2D (Latitudine vs Longitudine) sia l'input manipolato che il tentativo del modello di ricostruirlo.\n",
+    "Il grafico \"Visualizzazione Attacco Kinematic Inconsistency\"  è la prova visiva del fallimento del modello\n",
+    "  * **Input Attaccato:** La traiettoria inizia con un segmento normale, ma poi si osserva un salto netto e istantaneo (il \"Teletrasporto\") a un'altra coordinata. Questo è l'attacco cinematico che viola le leggi della fisica (un cambio di posizione senza velocità adeguata).\n",
+    "  * **Ricostruzione del Modello**:Il modello non riesce a replicare il salto. Al contrario, quando l'Encoder riceve il salto impossibile, il Decoder tenta di generare una sequenza che sia fisicamente plausibile e simile a quelle viste nel training.Il risultato è una ricostruzione distorta e spezzettata."
    ]
   },
   {
