--- a/Progetto/LSMT/Test_Kinematic_Inconsistency.ipynb
+++ b/Progetto/LSMT/Test_Kinematic_Inconsistency.ipynb
@@ -9,19 +9,20 @@
     "Questo blocco di codice iniziale serve come piattaforma di configurazione e caricamento per la valutazione dell'efficacia del modello LSTM Autoencoder nel rilevare attacchi cinematici.\n",
     "\n",
     "1. **Preparazione degli Strumenti Analitici e di Misurazione.**\n",
-    "    Il codice importa un set di librerie focalizzate sulla valutazione della performance dove troviamo le metriche standard di cybersecurity e machine learning **(come l'Accuracy, Precision, Recall, F1-Score e la Curva ROC).**\n",
+    "    Il codice importa un set di librerie focalizzate sulla valutazione della performance dove troviamo le metriche standard di machine learning.\n",
     "\n",
     "2. **Ottimizzazione e Caricamento dei Componenti.**\n",
     "   Viene eseguita l'ottimizzazione dell'hardware (GPU e Mixed Precision) per garantire che la fase di test sia rapida ed efficiente.\n",
     "   \n",
     "3. **Definizione del Contesto Operativo.**\n",
-    "   Vengono riconfermati i parametri strutturali del modello (WINDOW_SIZE, BATCH_SIZE e le quattro feature dinamiche) e, crucialmente, viene identificato il set di File di Test.\n",
+    "   Vengono riconfermati i parametri strutturali del modello (WINDOW_SIZE, BATCH_SIZE e le quattro feature dinamiche) e, crucialmente, viene identificato il set di File di Test.  \n",
+    "   \n",
     "   Questi file sono la base sperimentale. Su queste traiettorie originali (mai viste dal modello), verrà iniettato l'attacco cinematico. Il modello, che è stato addestrato solo sulla normalità, elaborerà queste traiettorie alterate."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "94e7889b",
    "metadata": {},
    "outputs": [
@@ -55,7 +56,7 @@
     "import pyarrow.parquet as pq\n",
     "import tensorflow as tf\n",
     "from tensorflow.keras import mixed_precision\n",
-    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, confusion_matrix, roc_curve, auc\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, confusion_matrix\n",
     "\n",
     "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '2'\n",
     "gpus = tf.config.list_physical_devices('GPU')\n",
@@ -225,7 +226,7 @@
     "2. **Iniezione del Salto di Posizione:**\n",
     "   * `batch_attacked[:, attack_start_idx:, 0] += shift_magnitude`(Latitudine) \n",
     "   * `batch_attacked[:, attack_start_idx:, 1] += shift_magnitude` (Longitudine)\n",
-    "      * Questo è il cuore dell'attacco: Viene aggiunto un offset costante (`shift_magnitude`, ad esempio, 2 deviazioni standard) a tutti i punti successivi al timestep 15. Questo crea un **\"gradino\"** istantaneo nel segnale della posizione, simulando un teletrasporto della nave.\n",
+    "      * Questo è il cuore dell'attacco: Viene aggiunto un offset costante `shift_magnitude` a tutti i punti successivi al timestep 15. Questo crea un **\"gradino\"** istantaneo nel segnale della posizione, simulando un teletrasporto della nave.\n",
     "\n",
     "3. **Incoerenza Vettoriale:** La parte cruciale dell'attacco è che i parametri dinamici (Velocità $\\text{SOG}$ e Rotta $\\text{COG}$, indici 2 e 3) non vengono modificati.\n",
     "\n",
@@ -332,7 +333,7 @@
    "metadata": {},
    "source": [
     "#### Calcolo degli Errori di Rilevamento\n",
-    "Si sottopone il modello addestrato ai dati conteneni l'attacco cinematico. Come metrica chiave calcoliamo il $\\text{MAE}$\n"
+    "Si sottopone il modello addestrato ai dati contenenti l'attacco cinematico. Come metrica chiave calcoliamo il $\\text{MAE}$\n"
    ]
   },
   {
@@ -433,7 +434,7 @@
    "id": "23701a3b",
    "metadata": {},
    "source": [
-    "#### Valutazione Quantitatica e Matrice di Confusione\n",
+    "#### Valutazione Quantitativa e Matrice di Confusione\n",
     "1. **Definizione Statistica della Soglia**\n",
     "    * Logica: La soglia di rilevamento **(THRESHOLD)** è definita statisticamente utilizzando gli errori di ricostruzione delle sole   traiettorie normali.\n",
     "    * **Regola del $3\\sigma$:** Si utilizza la regola della deviazione standard ($\\mathbf{3\\sigma}$), comune nei sistemi di rilevamento anomalie. La soglia viene impostata alla Media degli Errori Normali più tre volte la Deviazione Standard di tali errori.\n",
