--- a/Progetto/LSMT/Test_Silent_Drift.ipynb
+++ b/Progetto/LSMT/Test_Silent_Drift.ipynb
@@ -9,7 +9,7 @@
     "Questo blocco di codice iniziale serve come piattaforma di configurazione e caricamento per la valutazione dell'efficacia del modello LSTM Autoencoder nel rilevare attacchi Silent Drift.\n",
     "\n",
     "1. **Preparazione degli Strumenti Analitici e di Misurazione.**\n",
-    "    Il codice importa un set di librerie focalizzate sulla valutazione della performance dove troviamo le metriche standard di cybersecurity e machine learning **(come l'Accuracy, Precision, Recall, F1-Score e la Curva ROC).**\n",
+    "    Il codice importa un set di librerie focalizzate sulla valutazione della performance dove troviamo le metriche standard di machine learning.\n",
     "\n",
     "2. **Ottimizzazione e Caricamento dei Componenti.**\n",
     "   Viene eseguita l'ottimizzazione dell'hardware (GPU e Mixed Precision) per garantire che la fase di test sia rapida ed efficiente.\n",
@@ -357,9 +357,9 @@
     "\n",
     " * **Distribuzione Normale :** Come nelle analisi precedenti, gli errori sono estremamente concentrati vicino allo zero ($\\text{MAE} < 0.1$). Questo conferma la perfetta ricostruzione delle traiettorie pulite.\n",
     "\n",
-    " * **Distribuzione Silent Drift:** Questa distribuzione è nettamente separata dalla distribuzione normale, ma a un livello di errore $\\text{MAE}$ inferiore rispetto all'attacco cinematico (il picco è attorno a $0.4$, non a $0.9$ come nell'attacco precedente).\n",
+    " * **Distribuzione Silent Drift:** Questa distribuzione è nettamente separata dalla distribuzione normale, ma a un livello di errore $\\text{MAE}$ inferiore rispetto all'attacco cinematico (il picco è attorno a $0.4$).\n",
     "\n",
-    " * Sebbene l'errore sia inferiore (poiché la deriva è graduale, non un salto istantaneo), il modello è stato comunque in grado di rilevare l'incoerenza. La distanza tra la curva verde e la curva rossa è ampia, indicando che la differenziabilità è eccellente.\n",
+    " * Sebbene l'errore sia inferiore (poiché la deriva è graduale), il modello è stato comunque in grado di rilevare l'incoerenza. La distanza tra la curva verde e la curva rossa è ampia, indicando che la differenziabilità è eccellente.\n",
     "\n",
     "**Calcolo della Soglia Statistica**, che risulta essere uguale a $\\mathbf{0.1385}$\n"
    ]
